--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://wgui1.github.io
 title: Wei's blog
-#subtitle: A blogging framework for hackers.
+subtitle: 
 author: wgui
 simple_search: http://google.com/search
 description:
