--- a/_config.yml
+++ b/_config.yml
@@ -54,22 +54,22 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 
 # Each layout uses the default asides, but they can have their own asides instead. Simply uncomment the lines below
 # and add an array with the asides you want to use.
-# blog_index_asides:
-# post_asides:
-# page_asides:
+blog_index_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html]
+post_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html]
+page_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.html]
 
 # ----------------------- #
 #   3rd Party Settings    #
 # ----------------------- #
 
 # Github repositories
-github_user:
+github_user: wgui1
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
 
 # Twitter
-twitter_user:
+twitter_user: 
 twitter_tweet_button: false
 
 # Google +1
@@ -86,7 +86,7 @@ pinboard_user:
 pinboard_count: 3
 
 # Delicious
-delicious_user:
+delicious_user: wgui
 delicious_count: 3
 
 # Disqus Comments
