--- a/_config.yml
+++ b/_config.yml
@@ -91,8 +91,8 @@ delicious_user: weigui
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: wgui
+disqus_show_comment_count: 3
 
 # Google Analytics
 google_analytics_tracking_id:
