Set theme jekyll-theme-cayman

--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,5 @@ paginate_path: pages/page:num
 markdown: kramdown
 permalink: pretty
 exclude: ['Gemfile', 'Gemfile.lock']
+
+theme: jekyll-theme-cayman
