--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,33 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+
 # Site settings
-title: Wei's blog
-email: guienator@gmail.com
-description: "Programming Life"
-baseurl: ""
-url: "http://blog.wgui.net"
-timezone: "Asia/Shanghai"
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+title: Wei's Blog
+email: 815595@qq.com
+description: > # this means to ignore newlines until "baseurl:"
+  Programming as a dog
+baseurl: "" # the subpath of your site, e.g. /blog
+url: "" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: Wei
+github_username:  wgui1
 
 # Build settings
-#paginate: 5
-#paginate_path: pages/page:num
-#markdown: kramdown
-permalink: pretty
-theme: jekyll-theme-cayman
-exclude: ['Gemfile', 'Gemfile.lock', 'vendor']
+markdown: kramdown
+theme: minima
+gems:
+  - jekyll-feed
+exclude:
+  - Gemfile
+  - Gemfile.lock
+  - vendor
