Set theme jekyll-theme-midnight

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ github_username:  wgui1
 
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-midnight
 gems:
   - jekyll-feed
 exclude:
