--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ markdown: kramdown
 theme: jekyll-theme-midnight
 gems:
   - jekyll-feed
+  - jekyll-admin
 exclude:
   - Gemfile
   - Gemfile.lock
